# gds-idea-llmbo

./: .gitignore  404.html  AGENTS.md  batch_inference.py  objects.inv  pyproject.toml  readme.md
.github/workflows/: auto-release.yml  ci.yml  main.yml  release.yml
api/: index.html
docs/: index.md
examples/: example.py  structured_example.py
search/: search_index.json
site/: index.html
site/api/: index.html
site/search/: search_index.json
src/: batch_inference.py
src/llmbo/: __init__.py  batch_inferer.py  llmbo.py  models.py  registry.py  structured_batch_inferer.py
src/llmbo/adapters/: __init__.py  anthropic.py  base.py  mistral.py  mistral_function_calling.py
tests/: conftest.py  test_llmbo.py
tests/integration/: test_job_workflow.py
tests/unit/: test_batch_inferer.py  test_models.py  test_structured_batch_inferer.py
tests/unit/adapters/: test_mistral.py  test_mistral_function_calling.py
