[project]
name = "llmbo-bedrock"
dynamic = ["version"]
description = "Large Language Model Batch Operations"
readme = "docs/README.md"
authors = [
    { name = "David Gillespie", email = "david.gillespie@digital.cabinet-office.gov.uk" }
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.3,<2.0",
    "pydantic>=2.10",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://co-cddo.github.io/gds-idea-llmbo/"
Documentation = "https://co-cddo.github.io/gds-idea-llmbo/api/"
Repository = "https://github.com/co-cddo/gds-idea-llmbo.git"
Issues = "https://github.com/co-cddo/gds-idea-llmbo/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/llmbo/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/llmbo"]

[dependency-groups]
dev = [
    "hatch>=1.14.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "twine>=6.1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.3",
    "mkdocstrings[python]>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=llmbo"

[tool.ruff]
line-length = 120
exclude = ["src/llmbo/_version.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["llmbo"]

[[tool.uv.index]]
name = "llmbo-bedrock"
url = "https://upload.pypi.org/legacy/?llmbo-bedrock"
publish-url = "https://upload.pypi.org/legacy/?llmbo-bedrock"
explicit = true
